Bug 1303788 - Add support for trailing comma in argument and parameter lists (ES2017). r=arai